@@ -296,9 +296,8 @@ public final class JsonStyleParserHelper {
    *
    * @param styleJson The old style.
    */
-  @VisibleForTesting
   @Nullable
-  protected LineSymbolizer createLineSymbolizer(final PJsonObject styleJson) {
+  LineSymbolizer createLineSymbolizer(final PJsonObject styleJson) {
     final Stroke stroke = createStroke(styleJson, true);
     if (stroke == null) {
       return null;
@@ -313,8 +312,7 @@ public final class JsonStyleParserHelper {
    * @param styleJson The old style.
    */
   @Nullable
-  @VisibleForTesting
-  protected PolygonSymbolizer createPolygonSymbolizer(final PJsonObject styleJson) {
+  PolygonSymbolizer createPolygonSymbolizer(final PJsonObject styleJson) {
     if (this.allowNullSymbolizer && !styleJson.has(JSON_FILL_COLOR)) {
       return null;
     }
@@ -332,8 +330,7 @@ public final class JsonStyleParserHelper {
    *
    * @param styleJson The old style.
    */
-  @VisibleForTesting
-  protected TextSymbolizer createTextSymbolizer(final PJsonObject styleJson) {
+  TextSymbolizer createTextSymbolizer(final PJsonObject styleJson) {
     final TextSymbolizer textSymbolizer = this.styleBuilder.createTextSymbolizer();
 
     // make sure that labels are also rendered if a part of the text would be outside
@@ -426,7 +423,7 @@ public final class JsonStyleParserHelper {
     Expression fontFamily =
         parseExpression(null, styleJson, JSON_FONT_FAMILY, fontFamily1 -> fontFamily1);
     if (fontFamily == null) {
-      fontFamily = defaultFont.getFamily().get(0);
+      fontFamily = defaultFont.getFamily().getFirst();
     }
     List<Expression> fontFamilies = getFontExpressions(fontFamily, fontWeight);
 
@@ -440,7 +437,8 @@ public final class JsonStyleParserHelper {
       fontStyle = defaultFont.getStyle();
     }
 
-    Font font = this.styleBuilder.createFont(fontFamilies.get(0), fontStyle, fontWeight, fontSize);
+    Font font =
+        this.styleBuilder.createFont(fontFamilies.getFirst(), fontStyle, fontWeight, fontSize);
     if (fontFamilies.size() > 1) {
       // add remaining "fallback" fonts
       for (int i = 1; i < fontFamilies.size(); i++) {
@@ -600,20 +598,20 @@ public final class JsonStyleParserHelper {
       String yAlign = labelAlign.substring(1, 2);
 
       final double anchorInMiddle = 0.5;
-      if ("l".equals(xAlign)) {
-        anchorX = this.styleBuilder.literalExpression(0.0);
-      } else if ("c".equals(xAlign)) {
-        anchorX = this.styleBuilder.literalExpression(anchorInMiddle);
-      } else if ("r".equals(xAlign)) {
-        anchorX = this.styleBuilder.literalExpression(1.0);
-      }
-      if ("b".equals(yAlign)) {
-        anchorY = this.styleBuilder.literalExpression(0.0);
-      } else if ("m".equals(yAlign)) {
-        anchorY = this.styleBuilder.literalExpression(anchorInMiddle);
-      } else if ("t".equals(yAlign)) {
-        anchorY = this.styleBuilder.literalExpression(1.0);
-      }
+      anchorX =
+          switch (xAlign) {
+            case "l" -> this.styleBuilder.literalExpression(0.0);
+            case "c" -> this.styleBuilder.literalExpression(anchorInMiddle);
+            case "r" -> this.styleBuilder.literalExpression(1.0);
+            default -> anchorX;
+          };
+      anchorY =
+          switch (yAlign) {
+            case "b" -> this.styleBuilder.literalExpression(0.0);
+            case "m" -> this.styleBuilder.literalExpression(anchorInMiddle);
+            case "t" -> this.styleBuilder.literalExpression(1.0);
+            default -> anchorY;
+          };
     }
     boolean returnNull = true;
     if (anchorX == null) {
@@ -705,8 +703,7 @@ public final class JsonStyleParserHelper {
     if (styleJson.has(JSON_STROKE_DASHSTYLE)
         && !STROKE_DASHSTYLE_SOLID.equals(styleJson.getString(JSON_STROKE_DASHSTYLE))) {
       double width = 1.0;
-      if (widthExpression instanceof Literal) {
-        Literal expression = (Literal) widthExpression;
+      if (widthExpression instanceof Literal expression) {
         width = ((Number) expression.getValue()).doubleValue();
       }
       final Expression defaultDashSpacingE = this.styleBuilder.literalExpression(0.1f);
@@ -815,7 +812,7 @@ public final class JsonStyleParserHelper {
       }
 
       if (contentTypes != null && contentTypes.size() == 1) {
-        String contentType = contentTypes.get(0);
+        String contentType = contentTypes.getFirst();
         int index = contentType.lastIndexOf(";");
         return index >= 0 ? contentType.substring(0, index) : contentType;
       }
